tests/typechecking/valid/simpleftn.ml
let x= 10 in 
let y = 20 in 
let sum = x + y in 
print_int sum