tests/typechecking/invalid/fun4_wrng_param2.ml
let rec addition x y = x + y in 
addition 1